[tool.poetry]
name = "handson-fastapi"
version = "0.1.0"
description = ""
authors = ["ShinHeeJin <sisesu92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.104.1"}
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
jupyter = "^1.0.0"
pydantic = {extras = ["email"], version = "^2.5.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
remove_unused_imports = false